--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -46,7 +46,7 @@
 						<a class="btn btn-link btn-sm" 
 							ng-click="$event.stopPropagation()" 
 							ng-if="p.userCan.write" 
-							ui-sref="p.commentperiod.edit({periodId:p._id})">
+							ui-sref="p.commentperiod.edit({periodId:p._id})" href>
 							<span class="glyphicon glyphicon-pencil"></span>			
 						</a>
 					</td>
