Description field -> RTF

--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -37,7 +37,7 @@
 			<div class="col-sm-12">
 				<div class="form-group">
 					<label for="shortDesc" class="control-label">Description</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm text-area" ng-model="vc.description" rows="4"></textarea>
+					<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm text-area" ng-model="vc.description" rows="4"></textarea>
 				</div>
 			</div>
 		</div>
