--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -1,7 +1,7 @@
 <div class="project-comment-period-view">
 
 	<div class="view-title-container">
-		<h1>{{ project.name }}&nbsp; &rsaquo; &nbsp;Comment Periods</h1>
+		<h1><span>{{ project.name }}&nbsp;/&nbsp;</span>Comment Periods</h1>
 	</div>
 
 	<div class="view-body-container">
@@ -43,7 +43,7 @@
 						<i ng-if="p.isPublished" class="glyphicon glyphicon-ok"></i>
 					</td>
 					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
-						<a class="btn btn-link btn-sm" 
+						<a class="btn btn-default btn-sm" 
 							ng-click="$event.stopPropagation()" 
 							ng-if="p.userCan.write" 
 							ui-sref="p.commentperiod.edit({periodId:p._id})" href>
