--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -14,7 +14,7 @@
 	<div class="view-body-container">
 
 		<!-- TABS -->
-		<ul class="nav nav-tabs hidden" ng-init="form.curTab = 'Content'">
+		<ul class="nav nav-tabs" ng-init="form.curTab = 'Content'">
 			<li role="presentation" ng-class="{'active':form.curTab === 'Content'}">
 				<a href ng-click="form.curTab = 'Content'">Details</a>
 			</li>
@@ -46,7 +46,7 @@
 					<span> &nbsp; - &nbsp; </span>
 					<div class="form-control date-picker" x-modal-date-picker x-selected-date="period.dateCompleted">
 						<span ng-if="!period.dateCompleted">End Date</span>
-						{{ period.dateCompleted | amDateFormat:'MMMM DD, YYYY' }} 
+						{{ period.dateCompleted | amDateFormat:'MMMM DD, YYYY' }}
 						<span class="glyphicon glyphicon-calendar"></span>
 					</div>
 				</div>
@@ -97,11 +97,11 @@
 			</ul>
 		</div>
 
-		<div class="form-group hidden">
+		<div class="form-group">
 			<label class="control-label">Roles & Permissions</label>
 		</div>
 
-		<div class="row hidden">
+		<div class="row">
 			<div class="col-sm-3">
 				<label class="control-label">Roles</label>
 				<div class="well well-sm">
@@ -153,7 +153,7 @@
 			    	</div>
 				</div>
 			</div>
-			
+
 		</div>
 
 		<div class="form-footer clearfix">
