--- a/_unused/modules/newpubliccomments/client/views/comments-EAO.html
+++ b/_unused/modules/newpubliccomments/client/views/comments-EAO.html
@@ -1,7 +1,11 @@
 <div class="public-comment-period-view">
+
+    <div class="breadcrumbs">
+        {{project.name}} / Public Comment Periods
+    </div>
     
     <div class="view-title-container">
-        <h1>{{project.name}} &nbsp;&rsaquo;&nbsp; Public Comment Periods</h1>
+        <h1>Public Comment Periods</h1>
     </div>
     
     <div class="view-body-container">
