--- a/modules/documents/client/views/partials/document-link.html
+++ b/modules/documents/client/views/partials/document-link.html
@@ -31,7 +31,7 @@
 				</span>
 			</div>
 			<div class="actions">
-				<button class="btn btn-link" ng-click="docLink.changeItem(file)" title="Remove Document">
+				<button class="btn btn-default btn-sm" ng-click="docLink.changeItem(file)" title="Remove Document">
 					<span class="glyphicon glyphicon-remove"></span>
 				</button>
 			</div>
