--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -86,10 +86,10 @@
 						<pre class="open-house-desc">{{ h.description }}</pre>
 					</div>
 					<div class="actions">
-						<button class="btn btn-link" x-edit-open-house x-period="period" x-mode="edit" x-openhouse="h">
+						<button class="btn btn-default btn-sm" x-edit-open-house x-period="period" x-mode="edit" x-openhouse="h">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</button>
-						<button class="btn btn-link" x-edit-open-house x-period="period" x-mode="delete" x-index="$index">
+						<button class="btn btn-default btn-sm" x-edit-open-house x-period="period" x-mode="delete" x-index="$index">
 							<span class="glyphicon glyphicon-trash"></span>
 						</button>
 					</div>
