--- a/modules/project-comments/client/views/public-comments/add.html
+++ b/modules/project-comments/client/views/public-comments/add.html
@@ -78,7 +78,7 @@
 										</div>
 									</div>
 								</div>
-								<button class="btn btn-link" ng-if="!f.$error && !f.progress" ng-click="s.comment.removeFile(f)" title="Remove File">
+								<button class="btn btn-default btn-sm" ng-if="!f.$error && !f.progress" ng-click="s.comment.removeFile(f)" title="Remove File">
 									<span class="glyphicon glyphicon-remove"></span>
 								</button>
 							</div>
