--- a/modules/templates/client/views/template-document-editor.html
+++ b/modules/templates/client/views/template-document-editor.html
@@ -36,7 +36,7 @@
                     </span>
                 </span>
                 <span class="actions">
-                    <button class="btn btn-link">
+                    <button class="btn btn-default btn-sm">
                         <span class="glyphicon glyphicon-download-alt"></span>
                     </button>
                 </span>
