Remove Working Group selection from add Comment Period.

--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -28,7 +28,7 @@
 				<label class="control-label">Comment Period Type</label>
 				<select ng-change="changeType()" ng-model="period.periodType" class="form-control">
 					<option ng-selected="selected">Public</option>
-					<option>Working Group</option>
+					<!-- <option>Working Group</option> -->
 				</select>
 			</div>
 			<div class="col-md-4 col-xl-3 form-group">
