Accessibility Development/Improvements - Added title tags to side menu items - Added appropriate title and naming convention for deleting documents in the document-browser.html - Updated markup to ensure hover/focus/drag states for the Upload Target widget (document-upload-classify.html)
Miscellaneous UI Improvements
- Removed unused wrapper elements in index.server.view.html and layout.server.view.html and project.abstract.html
- Small styling fixes in public-comments/main.html
- Fixing some values that shouldn't appear in the tombstone when no data is available (project-tombstone.html)

--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -242,7 +242,7 @@
 							<span class="glyphicon glyphicon-link"></span><span>Link</span>
 						</a>
 						<a class="btn btn-default btn-sm" href ng-click="docBrowser.deleteDocument(filterSummary._id)" ng-if="(docBrowser.authentication.user)" title="Delete Document">
-							<span class="glyphicon glyphicon-trash"></span><span>Remove</span>
+							<span class="glyphicon glyphicon-trash"></span><span>Delete</span>
 						</a>
 					</div><!-- / DOCUMENT ACTIONS -->
 				</div>
