--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -1,17 +1,16 @@
 <div class="public-comment-period-view">
 
-    <div class="view-title-container no-border">
+    <div class="view-title-container">
         <h1>{{project.name}} &nbsp;&rsaquo;&nbsp; Public Comment Period</h1>
     </div>
 
     <div class="view-body-container">
 
-        <div class="panel panel-default">
-            
+        <div class="panel panel-default">   
             <div class="pcp-alert clearfix">
                 <div class="pull-left">
                     <h2>Public Comment Period is <span ng-if="isBefore">Scheduled</span><span ng-if="isOpen">Now Open</span><span ng-if="isClosed">Now Closed</span>.</h2>
-                    <span class="pcp-dates">{{ period.dateStarted | amDateFormat:'MMMM Do YYYY' }} &nbsp;-&nbsp; {{ period.dateCompleted | amDateFormat:'MMMM Do YYYY' }}</span>
+                    <span class="pcp-dates">{{ period.dateStarted | amDateFormat:'MMMM Do, YYYY' }} &nbsp;-&nbsp; {{ period.dateCompleted | amDateFormat:'MMMM Do, YYYY' }}</span>
                 </div>
                 <div class="pcp-comment-btn-container">
                     <button class="btn submit-comment-btn" ng-if="isOpen && period.userCan.addComment" x-add-public-comment x-project="project" x-period="period">
@@ -29,7 +28,7 @@
                     <!-- <pre class="pcp-desc" ng-if="isClosed">These are the closing remarks</pre> -->
                 </section><!-- / ABOUT -->
                 <!-- RELATED DOCUMENTS -->
-                <section>
+                <section class="pcp-related-docs">
                     <h4>Related Documents</h4>
                     <div class="list-group">
                         <a class="list-group-item flex-row" x-artifact-display-modal x-mode="'view'" x-artifact="artifact" x-project="project">
