--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -44,14 +44,14 @@
 	<div ng-if="(menu.context === 'project' || menu.context === 'activity') && menu.authentication.user">
 		
 		<ul class="nav nav-pills nav-stacked">
-			<li><a ui-sref="p.detail({projectid: menu.project.code})">Project Detail</a></li>
+			<li><a ui-sref="p.detail({projectid: menu.project.code})" title="Project Details">Project Detail</a></li>
 		</ul>
 
 		<!-- PROJECT CLIENT MENUS (project.client.menus.js) -->
 		<ul class="nav nav-pills nav-stacked" ng-show="menu.authentication.user">
 			<li ng-repeat="item in menu.projectTopMenu.items | orderBy: 'position'" ng-if="item.shouldRender(menu.authentication.user, menu.project);"
 			    ng-class="{ 'active': $state.includes(item.state) }" class="{{item.class}}">
-				<a ui-sref="{{item.state}}" ng-bind="item.title"></a>
+			    <a ui-sref="{{item.state}}" ng-bind="item.title" title="{{item.title}}"></a>
 			</li>
 		</ul><!-- / PROJECT CLIENT MENUS -->
 
@@ -59,7 +59,7 @@
 			<li ng-repeat="item in menu.projectMenu.items | orderBy: 'position'"
 			    ng-if="item.shouldRender(menu.authentication.user, menu.project);"
 					ng-class="{ active: $state.includes(item.state) }" class="{{item.class}}">
-				  <a ui-sref="{{item.state}}" ng-bind="item.title"></a>
+				  <a ui-sref="{{item.state}}" ng-bind="item.title" title="{{item.title}}"></a>
 			</li>
 		</ul>
 
