--- a/modules/core/server/views/index.server.view.html
+++ b/modules/core/server/views/index.server.view.html
@@ -1,5 +1,5 @@
 {% extends 'layout.server.view.html' %}
 
 {% block content %}
-  <section ui-view></section>
+  <section ui-view class="app-main"></section>
 {% endblock %}
