--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -21,7 +21,7 @@
 					<span class="value">{{ ::project.proponent.company }}</span>
 				</div>
 			</div>
-			<div class="col-sm-4 col-md-4">
+			<div class="col-sm-4 col-md-4" ng-if="project.location">
 				<div class="detail-row">
 					<label>Location</label>
 					<span class="value">{{ ::project.location }}</span>
