--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -2,10 +2,10 @@
 
 	<!-- PUBLIC USERS (COMMON) -->
 	<div ng-show="!menu.authentication.user">
-		<ul class="nav nav-pills">
-			<li><a ui-sref="p.detail" href>Project Details</a></li>
-     		<li><a ui-sref="p.documents" href>Documents</a></li>
-     		<li><a ui-sref="p.commentperiod.list" href>Public Comment Periods</a></li>
+		<ul class="nav nav-pills nav-stacked">
+			<li><a ui-sref="p.detail" href title="Project Details">Project Details</a></li>
+     		<li><a ui-sref="p.documents" href title="Documents">Documents</a></li>
+     		<li><a ui-sref="p.commentperiod.list" href title="Public Comment Periods">Public Comment Periods</a></li>
 		</ul>
 	</div><!-- / PUBLIC USERS (COMMON) -->
 
