Adding application title
- Small markup fix for guidance-main.html

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -2,7 +2,12 @@
 	<nav class="navbar">
 
 		<div class="navbar-header">
-			<div class="navbar-brand"><a ui-sref="projects" href><img src="{{logo}}" alt="Government of B.C." title="Government of B.C."></a></div>
+			<div class="navbar-brand">
+				<a ui-sref="projects" href>
+					<img class="app-brand-img" src="{{logo}}" alt="Government of B.C." title="Government of B.C.">
+					<span class="app-title">EAO Project Information & Collaboration</span>
+				</a>
+			</div>
 		</div>
 
 		<span ng-if="false">
