--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1757,25 +1757,33 @@ $header-height-sm: 5.2rem;
 		min-height: $header-height-sm;
 
 		a {
-			margin-top: 0.3rem;
+			margin-top: 0.4rem;
 			margin-left: 1rem;
 			padding: 0.5rem;		
 			display: inline-block;
 			color: #FFF;
+			text-decoration: none;	
 			border: 1px solid transparent;
 
 			&:focus {
 				border: 1px solid $header-focus-border-color;
 			}
 		}
-		
-		img {
+	
+		.app-brand-img,
+		.app-title {
 			display: inline-block;
+			vertical-align: middle;
+		}
+
+		.app-brand-img {
 			height: 25px;
 		}
 
 		.app-title {
-			display: inline-block;
+			padding-top: 0.6rem;
+			margin-left: 1.5rem;
+			font-size: 1.4rem;
 			font-weight: bold;
 		}
 	}
@@ -1808,15 +1816,16 @@ $header-height-sm: 5.2rem;
 @media (min-width: 480px ) {
 	.app-header {
 		.navbar-brand {
-			img {
+			a {
+				margin-top: 0.2rem;
+			}
+
+			.app-brand-img {
 				height: 30px;
 			}
 
 			.app-title {
-				margin-left: 1.5rem;
-				padding-top: 0.2rem;
-				padding-left: 1.75rem;
-				border-left: 1px solid #FFF;
+				padding-top: 0.4rem;
 			}
 		}
 	}
@@ -1835,9 +1844,20 @@ $header-height-sm: 5.2rem;
 			margin: 1rem;
 		}
 		
-		.navbar-brand {		
-			img {
+		.navbar-brand {
+			a {
+				margin-top: 0.4rem;
+			}
+
+			.app-brand-img {
 				height: 35px;
+			}
+
+			.app-title {
+				padding-top: 0.6rem;
+				margin-left: 1.5rem;
+				font-size: 1.4rem;
+				font-weight: bold;
 			}
 		}
 		
@@ -1900,6 +1920,7 @@ $header-height-sm: 5.2rem;
 			display: block;
 			min-width: 3.75rem;
 			padding: 0.75rem 0;
+			font-size: 1.3rem;
 			color: #FFF;
 			text-align: center;
 			text-decoration: none;
@@ -2258,9 +2279,9 @@ $sidenav-color: $link-color;
 
 .btn-sm {
 	.glyphicon {
+		margin-top: -5px;
 		font-size: 1.2rem;
 		vertical-align: middle;
-		margin-top: -5px;
 	}
 }
 
@@ -3548,13 +3569,6 @@ section.project-info {
 
 /* DOCUMENT BROWSER VIEW
 ------------------------------ */
-.documents-view {
-	.view-title-container {
-		padding-bottom: 0;
-		border: none;
-	}
-}
-
 .document-browser-view {
 	.panel-body {
 		padding: 0;
