--- a/modules/guidance/client/views/guidance-main.html
+++ b/modules/guidance/client/views/guidance-main.html
@@ -1,6 +1,6 @@
 <div class="guidance-main-view">
 
-    <div class="view-title-container no-border">
+    <div class="view-title-container">
         <h1>Guidance</h1>
     </div>
     
