--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -4269,6 +4269,21 @@ section.project-info {
 }
 
 .public-comment-modal {
+	.alert {
+		margin: -2rem;
+		margin-bottom: 2.5rem;
+		padding: 1.5rem 2rem;
+		border-radius: 0;
+
+		.title {
+			font-size: 1.8rem;
+		}
+
+		.details {
+			margin-top: 1rem;
+		}
+	}
+	
 	h4 {
 		margin-top: 1rem;
 		font-weight: bold;
